--- a/metastable3/1-01.html
+++ b/metastable3/1-01.html
@@ -18,18 +18,19 @@
 
 　――３
 
-　三、three、みっつ。不思議な数字だと藤白は思う。１は単純で力強い。２は調和がとれていて美しい。だが３は……、まるでふらふらと持ちこたえる<ruby>天秤<rp>《</rp><rt>バランス</rt><rp>》</rp></ruby>のように危うく今にも崩れ落ちてしまいそうな気がしてならない。理由は分からない。ただそれは数を数えるという行為を知ってからずっと持ち続けてきた<ruby>感覚<rp>《</rp><rt>イメージ</rt><rp>》</rp></ruby>だ。
+　さん、すりー、みっつ。
+　不思議な数字だと藤白は思う。１は単純で力強い。２は調和がとれていて美しい。だが３は……、まるでふらふらと持ちこたえる<ruby>天秤<rp>《</rp><rt>バランス</rt><rp>》</rp></ruby>のように危うく今にも崩れ落ちてしまいそうな気がしてならない。理由は分からない。だがそれは数を数えるという行為を知ってからずっと持ち続けてきた<ruby>感覚<rp>《</rp><rt>イメージ</rt><rp>》</rp></ruby>だ。
 　たとえば１÷３は割り切れない。たとえば攻守の切り替わる野球のスリーアウト。なかなか起こらないハットトリック。<ruby>一人称<rp>《</rp><rt>じ ぶ ん</rt><rp>》</rp></ruby>でも<ruby>二人称<rp>《</rp><rt>あ　い　て</rt><rp>》</rp></ruby>でもない<ruby>三人称<rp>《</rp><rt>べつのだれか</rt><rp>》</rp></ruby>。対角線の引けない三角形。第三惑星にだけ発生した生命。そういえば物理の教師が言っていた。物理では物の数が三つ以上になると問題が正確に解けなくなってしまうのだと。世界は「ひとつ、ふたつ、たくさん」なのだと。
 　だからそんな危うい数が扉を開く鍵だと偶然に知った時はとても驚いた。
 　ここ党立<ruby>真揺<rp>《</rp><rt>まゆらぎ</rt><rp>》</rp></ruby>高校の、屋上へと繋がる非常階段。ひと気のない西棟の外縁にひっそりと立てられた背の高い鉄製の囲い。四階から屋上へと向かう部分には、生徒の立ち入りを禁じるための分厚い扉が設けられている。
 　ちょうど一週間ほど前のことである。私生活上のちょっとした問題に悩んでた<ruby>藤白<rp>《</rp><rt>ふじしろ</rt><rp>》</rp></ruby><ruby>貴和<rp>《</rp><rt>たかかず</rt><rp>》</rp></ruby>は人の居ない場所を探してここに辿り着き、なんとかして屋上に出られないものかと暗証番号を片っ端から押してみたところ見事当たりを引き当ててしまったのだ。
-　とは言っても本気で解錠しようと思ったわけではない。藤白のやったことはただぼうっと何も考えず、ボタンを００００から順に押していただけだ。遠い眼差しで白痴のように<ruby>総当たり攻撃<rp>《</rp><rt>ブルートフォースアタック</rt><rp>》</rp></ruby>をしかける自分。傍から見ればさぞ不気味な光景だっただろう。だがそんなことを十分も十五分も続けている内に鍵はあっけなく開いてしまい、そしてそのロックを外す番号が……０３２７だったのだ。
+　とは言っても本気で解錠しようと思ったわけではない。藤白のやったことはただぼうっと何も考えず、ボタンを００００から順に押していただけだ。遠い眼差しで白痴のように総当たり攻撃をしかける自分。傍から見ればさぞ不気味な光景だっただろう。だがそんなことを十分も十五分も続けている内に鍵はあっけなく開いてしまい、そしてそのロックを外す番号が……０３２７だったのだ。
 　後々考えてみればなんてことはない。０３２７……つまり三月二十七日。学校の創立記念日である。しかし、無心でボタンを押していたただけの藤白にとってその０３２７という数字はまた別の意味を持ったものに思えてならなかった。すなわち０３と２７。『３』と『３の３乗』である。
 　そして藤白は今日もこの扉の前にやってきた。
-　あれ以来――と言っても数日前のことだが、何か嫌なことがあったり、ひとりで考え事をしたいときは絶対にこの場所へ来ようと決めていた。なぜなら藤白にはこの扉を開けた先の空間が、３という今にも折れてしまいそうな鍵を使ってようやく辿り着ける場所が、まるでこの世ならざる世界のように思えてならないからだ。人の居ない空間。日常という安定した世界の中に空いた虫食い穴のような異世界。嫌なことを忘れたり、考え事をするには持ってこいである。
-　――カズくんってロマンチスト。
+　あれ以来何か嫌なことがあったり、一人で考え事をしたいときは絶対にこの場所へ来ようと決めていた。なぜなら藤白にはこの扉を開けた先の空間が、３という今にも折れてしまいそうな鍵を使ってようやく辿り着ける場所が、まるでこの世ならざる世界のように思えてならなかったからだ。人の居ない空間。日常という安定した世界の中に空いた虫食い穴のような異世界。嫌なことを忘れたり、考え事をするには持ってこいである。
+　――カズくんってロマンチストだよね。
 　不意に、幼なじみから言われた言葉が脳裏をよぎり藤白は苦笑した。
-　いくら屋上が普段から立ち入りを禁じられている場所だとはいえ異世界はさすがに言い過ぎだと自分でも思う。教師連中は普通に出入りできるのだし、生徒会だか何とか委員会だかの連中が所用で登っているのも何度か目にした。あのとき彼らはみんな異世界に行っていたとでも言うのか？　そもそも０３２７を３と３の３乗に分解するのが恣意的だし、もっと言えば３という数字にそういう呪術的な意味を見出すこと自体がたぶん非科学的なのだろう。数学はあまり得意ではないけれど、３が単なる数字の一つでしかないことは藤白にだってよく分かる。同じようなこじつけはきっと１とか２とか他の多くの数にだって可能であるはずだ。
+　いくら屋上が普段から立ち入りを禁じられている場所だとはいえ異世界はさすがに言い過ぎだと自分でも思う。教師連中は普通に出入りできるのだし、生徒会だか何とか委員会だかの連中が所用で登っているのも何度か目にした。あのとき彼らはみんな異世界に行っていたとでも言うのか？　そもそも０３２７を３と３の３乗に分解するのが恣意的だし、もっと言えば３という数字にそういう呪術的な意味を見出すこと自体がたぶん非科学的なのだろう。数学はそこまで得意ではないけれど、３が単なる数字の一つでしかないことは藤白にだってよく分かる。同じようなこじつけはきっと１とか２とか他の多くの数にだって可能であるはずだ。
 （ロマンチスト……か。まあ自覚はあったけどな）
 　そんなセリフを頭で唱えてみても、自分の感覚は頑として理性に従ってくれない。そんなものあるはずがないと分かっていても、自分の心はここが日常と非日常が交わる汽水域であると声高に主張して聞かなかった。
 （でも俺がここを気に入ってるのは事実で……）
@@ -43,7 +44,8 @@
 　しばらくの間、二人は互いに見つめ合ったまま何も言わなかった。とはいっても実のところほんの一秒かそこらでしかない。だが、このときの藤白にはその一秒が何倍にも引き伸ばされてしまったように感じられてならなかったのだ。自分以外に誰も来ないと思い込んでいた場所、日常と非日常の交わる汽水域に居た予期せぬ少女。その存在がまるでこの世ならざる世界への先導役か何かに見えてしまい、藤白の胸が大きく音を立てる。呼吸が不規則になり息ができない。まるで肋骨の内側を撫で回されているような、心臓が暴れ出すような、そんな感覚。
 「え、えっと……」
 　そんな苦しさから逃げるように、藤白は肺の奥から声を絞り出した。人付き合いは苦手ではなかったし、見ず知らずの人でもそこそこ話せるタイプだと思う。だがこの時ばかりは頭が真っ白になっていて、続く言葉が出てこない。
-　次の瞬間、カキンと金属バットの音が遠くに響き、張り詰めていた空間が割れた。女の子ははっと何かを思い出したように立ち上がると、そのまま俯きがちに藤白の横を通りぬける。柔らかな匂いが一瞬鼻を突き、はっと我に返ったその時にはもう女の子は階段の角を曲がって見えなくなろうとしているところだった。
+　次の瞬間、カキンと金属バットの音が遠くに響き、張り詰めていた空間が割れた。女の子ははっと何かを思い出したように立ち上がると、そのまま俯きがちに藤白の横を通りぬける。柔らかな匂いが一瞬鼻を突き、はっと我に返ったその時にはもう女の子は階段の踊り場を曲がって見えなくなろうとしているところだった。
+（…………）
 　女の子が去ってからも藤白はしばらくその場に立ち尽くしていた。残ったのは真っ赤な夕焼けの空と学校全体を包み込む緩慢な静寂。威勢のいい運動部の掛け声と吹奏楽部の奏でる金管楽器の音色が風に乗って運ばれてくる。
 　ふぅ、と一つため息。
 　ようやく息ができるようになった気がした藤白は今まで女の子の座っていたところへと視線を移し、舐めるように足元を見渡す。だがそこにあるのは何ら変哲のない、土埃にまみれた赤黒い鋼鉄製のステップだけ。忘れ物でもしてくれていれば追いかける口実にもなったのだが、現実はそんなに上手くいかなかった。
