--- a/metastable3/1-02.html
+++ b/metastable3/1-02.html
@@ -15,150 +15,55 @@
 <div class="text">
 　目覚ましがけたたましい音を立てて鳴り響く。
 　本日五度目のアラーム音。藤白は布団から手を伸ばして、時計の頭部分に付いているスイッチを押した。時計の長針が指し示す時刻は五十六分、もうそろそろ起きないと危ない時間帯だが、いかんせん体が動いてくれない。
-「貴和ー、いいかげん起きなさい！」
-　扉越しに母親の声がする。わーった、と返事をするものの全身がとてつもなく重い。起きようという意識だけが頭の表層を上滑するばかりで、それも眠気の波に埋もれていく。
+「貴和！　いいかげん起きなさい！」
+　扉越しに母親の声がする。わーった、と返事をするものの全身がとてつもなく重い。起きようという意識だけが頭の表層を上滑するばかりで、それもすぐに眠気の波に埋もれていく。
 「ああ、<ruby>紀佳<rp>《</rp><rt>のりか</rt><rp>》</rp></ruby>ちゃん。いつもごめんね。それに病み上がりだっていうのに」
 「私はもう大丈夫なので」
 　扉越しに聞き慣れた少女の声がする。
-　その落ち着いた鈴のような声はまるで夢の中から響いてきているようで、どこか現実感がない。馴染みのある少女が夢にまで出てきたと、そんな風に思ってしまう。
+　その落ち着いた鈴のような声はまるで夢の中から響いてきているようで、どこか現実感がない。馴染みのある少女が夢にまで出てきたと、そんな風に思ってしまう藤白だった。だが、
 　がちゃり、と扉の開く音。
 　次いで誰かがゆさゆさと藤白の体を揺すった。
 「カズくん起きて、学校遅れるよ」
 　――！！
-　小さな手のひらの感触が肩に触れ、藤白は針で刺されたように飛び起きた。上半身を起こしてベッドの前に立つ少女をまじまじと凝視する。
+　夢の中に出てきた少女に肩を触れられ、藤白は針で刺されたように飛び起きた。上半身を起こしてベッドの前に立つ少女をまじまじと凝視する。
 「紀佳……お前……」
 「これ着替え。じゃあ私外で待っとくから」
-　少女はそう言い捨てると、長い黒髪をたなびかせて藤白に背を向け、さっさと部屋の外へ出て行ってしまう。藤白はしばらくの間、少女の閉めた扉を呆然と眺めていた。
+　人民服を着た少女はそう言い捨てると、長い黒髪をたなびかせて藤白に背を向け、さっさと部屋の外へ出て行ってしまう。藤白はしばらくの間、少女の閉めた扉を呆然と眺めていた。
 （…………）
-　再び鳴り始めた目覚まし時計にはっとする。時計を見ればもうそろそろ準備を始めなければ危ない時間帯だ。藤白は目覚まし時計のスヌーズを切るとカーキ色のズボンに足を通し、制服に着替えた。
-　朝食を抜いて顔を洗い、寝ぐせを適当に直して人民帽を浅くかぶる。靴を履いて扉の外にでると、そこにはさきほどの少女が腕時計に目を落として待っていた。
+　再び鳴り始めた目覚まし時計にはっとする。時計を見ればもうそろそろ準備を始めなければ危ない時間帯だ。藤白は目覚まし時計のスヌーズを切るとカーキ色のズボンに足を通し、制服に着替えた。朝食を抜いて顔を洗い、寝ぐせを適当に直して人民帽を浅くかぶる。靴を履いて玄関の外にでると、そこに立っていたのはさきほどの少女。
 「遅い。早くしないと遅れる」
-　紀佳はそう言ってじとりとした目つきで藤白を睨んでみせる。少しわざとらしい仕草だった。
+　紀佳はそう言ってじとりとした目つきで藤白を睨んでみせる。いつもと変わらなぬ、少しわざとらしいくらい普段通りの仕草だった。
 「紀佳……あのさ俺……」
 「もういいから。私その話したくない。それより早くいこ？」
-　少女はそれだけ言い捨てると、団地の廊下を一人歩き出す。藤白も慌てて後を追った。黙々と廊下を歩き、無言のエレベーターに乗って外へ出る。団地の外の日差しは燦々として柔らかく、まさに春といった様子である。
+　少女はそれだけ言い捨てると、団地の廊下を一人歩き出す。藤白も慌てて後を追った。黙々と廊下を歩き、無言でエレベーターに乗って外へ出る。団地の外の日差しは燦々として柔らかく、まさに春といった様子だった。
 　そんなさやわかな春の空気が満ちるニュータウンを、藤白と紀佳は学校へ向けて歩いて行く。いつもなら紀佳が一方的に好きな漫画の話をしたり、藤白が日常の些細な出来事を報告したりしながら過ぎていくだけの時間も、今日ばかりは少しだけ空気が重い。
 「このペースだと……うん、ぎりぎり間に合いそう」
 　そして信号待ちをしている途中、重い空気を先に破ったのは紀佳だった。
 「新年度二日目からこれだと先が思いやられる。これからはちゃんと早起きしてほしい」
 「……別に来なくても良かったんだぞ」
-　藤白は、後ろに立つ紀佳を振り返らずに言った。
+　同じく信号待ちをする藤白は、後ろに立つ紀佳を振り返らずにそう告げた。二人の前を『たけのこ幼稚園』の送迎バスがのろのろと横切る。車内で幼稚園児が楽しそうにはしゃいでいるのが見えた。
 「別に毎朝起こしに来てくれなくたって、俺が朝起きれなくて遅刻したって、紀佳が困るわけじゃない。学年の変わり目だし、昔から続けてた日課を止めるいい機会だったんじゃないか？　どうして今日来たんだよ。やめとけばよかったのに」
 「…………」
-　背後の気配は答えない。
-「大体、紀佳はいっつもそうだ。何考えてんだかわかんないっていうか――って、うわっ！？」
+　背後の少女は答えない。
+「大体、紀佳はいっつもそうだ。いつもぼけっとした無表情で何考えてんだかわかんないから俺は――って、うわっ！？」
 　突然、藤白の膝が折れ曲がった。
 　あまりの唐突さに、それが背後からなされた不意打ちの膝かっくんであると気付くまで少し時間を要してしまう。
 「って紀佳、何やってんだよ！　お、俺は真面目な話を――」
 「信号変わった」
 　紀佳は藤白の剣幕などどこ吹く風といった様子で目の前の信号機を指さすと、一人そそくさと横断歩道を渡り始める。
 「ただでさえ時間あぶないのに、悠長にそんな話してる時間ないでしょ。ほら、早く行こう」
-　そして十分ほど歩いた先。団地と戸建住宅が立ち並ぶ真揺ニュータウンを抜けたすぐの場所に、二人の通う党立真揺高校は立地している。校門の前に来ると、カーキの人民服を来た男女がどっと増える。みなこの学校の生徒だ。誰もが早足なのは今が始業前だからだろうか。
+　そして十分ほど歩いた先。緑につつまれ団地と戸建住宅が立ち並ぶニュータウンを抜けたすぐの場所に、二人の通う党立真揺高校は立地している。校門の前に来ると、カーキの人民服を来た男女がどっと増えた。みなこの学校の生徒である。時間が時間だからか、校門を横切る人民服姿の生徒たちは誰も心なしか早足だ。
 「じゃあ、私はこっちだから」
-　そう告げた紀佳と下足箱の前で別れる。紀佳は今年から三年、藤白は今年から二年だ。
-　そう紀佳は藤白よりもひとつ年上である。向かいの団地に住んでいて、小学生の頃からよく一緒に遊んでいたのでときどき忘れてしまいそうになるが、紀佳は自分より一足先に卒業してしまうのだ。そんな人にいつまでも朝起こしに来てもらうわけにはいかない、と藤白は思う。
+　昇降口の前で紀佳はそう告げると、小さく手を降って自らの靴箱へ向かって歩き出す。彼女は今年から三年、藤白は今年から二年だ。
+　そう紀佳は藤白よりもひとつ年上である。向かいの団地に住んでいて小学生の頃からよく一緒に遊んでいたので時々忘れてしまいそうになるが、紀佳は自分より一足先に卒業してしまうのだ。そんな人間にいつまでも朝起こしに来てもらうわけにはいかないと藤白は思う。
 「俺も……早起きできるようにならないとな」
-　そうこぼすと同時に予鈴が鳴った。まずい、そろそろ教室へ向かわねば。そう気を取り直して上履きに履き替えた藤白の目に、一人の人物が飛び込んできた。
-　負けん気だけは人一倍強そうな目と、校則違反まちがいなしであろう明るい色のくせっ毛。昨日屋上へ通じる階段で出会った、あの女の子だった。
-（あの子……！）
-　藤白の体に電撃が走る。
-　あの踊り場に、異世界へ通じる扉の向こう側にいた女の子。もう二度と会えないような気がしていたが、よくよく考えればそんなことはない。同じ学校に通っているのだ。何かの拍子に再び顔を合わせることは容易に起こり得る。
-　それに女の子と会ったのは昨日の今日だ。まさか出会った翌日にこうしてまた群衆の中から彼女の姿を見つけることができるなんて。その背中に何か運命めいたものを感じてしまった藤白は、予鈴がすでに鳴り終わったことも忘れて、女の子の後を付けてみることにした。
-　女の子は渡り廊下へは行かずに、そのまま下駄箱のすぐそばの階段へ向かう。一階分、二階分、そして三階分の階段を登り。その少しだけ小さな背中が教室の中に消えて初めて藤白はそのことに気が付いた。
+　言葉をこぼすと同時に予鈴が鳴った。まずい、そろそろ教室へ向かわねば。そう気を取り直して上履きに履き替えた藤白の目に、一人の人物が飛び込んでくる。負けん気だけは人一倍強そうな目と、校則違反まちがいなしであろう明るい色のくせっ毛。
+　体に電撃が走った。
+　昨日屋上へ通じる階段で出会った女の子、あの踊り場に……異世界へ通じる扉の向こう側で出会った女の子だった。もう二度と会えないような気がしていたが、よくよく考えればそんなことはない。同じ学校に通っているのだ。何かの拍子に再び顔を合わせることは容易に起こり得る。
+　だが女の子と会ったのは昨日の今日だ。まさか出会った翌日にこうしてまた群衆の中から彼女の姿を見つけることができるなんて。藤白は女の子の姿にそんな運命めいた何かを感じてしまい、予鈴がすでに鳴り終わったことも忘れて無心に女の子の後を追いかける。
+　女の子は渡り廊下へは行かずに、そのまま下駄箱のすぐそばの階段へ向かった。一階分、二階分、そして三階分の階段を登り。その少しだけ小さな背中が教室の中に消えて初めて藤白はそのことに気が付く。
 （三年生……だったのか）
 　女の子が入っていった教室には『３－６』という掲示が掲げられている。
-　
-　放課後。
-　一日目の授業なんてものはたいていがオリエンテーションみたいなもので、どういう風に勉強を進めるだとかの話で授業の半分くらいが潰れてしまう。おまけに今年度から藤白の担任となった教師はいわゆる『あたり』で、授業後のホームルームが著しく短いことで有名だった。
-　そんなわけで、現在ホームルームを終えた教室の中には、一日で浪費すべきエネルギーを有り余らせた生徒達が、思い思いの放課後を描きながら帰り支度をしている最中だった。
-　そしてそれは藤白も同じである。
-　急いで身支度を済ませ、一緒に帰ろうという友人の誘いを断って廊下に飛び出る。向かうは三年六組の教室。あの女の子のクラス。藤白は大股で渡り廊下を歩くと、そのままの勢いに階段を登って３－６の前までやってきた。
-　どこもまだホームルームの最中なのか、教室前の廊下はひっそりと静まり返っている。藤白は後ろ側の扉の窓から、こっそりと中を窺ってみた。
-（げっ……そういえば紀佳もこのクラスだった）
-　真っ先に目に飛び込んできたのは見覚えのある後ろ姿。最後尾の席に座った紀佳はぼさっとした顔で担任の話に耳を傾けている。だがこの小さな窓からはどんな角度で覗いてみても、お目当ての女の子の姿は見当たらない。ここからは死角になっている前の方の席なのだろうか。
-　そんなことを考えているうちにホームルームが終わった。藤白は教室のなかを覗きこむのをやめ、さも誰かを待っているそぶりで廊下に立ち尽くす。担任と思しき教師が部屋から出てくると、ついで雪崩をうったかのように教室からぞろぞろと生徒が出てきた。藤白はその中の一段に探し求めている女の子の背中がないか注視する。途中紀佳が出てきたときは慌てて教室に背を向けたが、幸いにして気付かれることはなかった。
-　だがいくら待ってみても女の子はなかなか出てこない。しびれを切らした藤白は、勇気を振り絞って教室の中へ入ってみようと思った。　クラス意識というものは中学生や高校生独特のものだ。開けっぴろげな小学生やクラスのない大学生には存在しない、人生のうちの六年間だけに備わる感覚である。だから藤白も、馴染みのない教室へ足を踏み入れるのには抵抗がある。ましてやそれが上級生のクラスであるならなおのこと。
-　だが幸いにも今日は新学年がスタートしてまだ二日目。教室に慣れていないのはそこの住人も同じことであって、まだクラスの面々も覚えきれていない人だって多いだろう。そこに知らない顔が一つ増えたところで、さして怪しまれることはないだろう。
-　そう考え、少しだけ高鳴る動悸を感じながら教室の引き戸を開き、中へと入ってみる。
-（……いた！）
-　あのとき出会った女の子は、窓際の一番前の席に座っていた。教室の後ろからでは顔はよく見えないが、あの校則違反間違いなしの明るい髪色は、まさに彼女に違いなかった。
-「おう藤白、何してんだ？」
-　そんな風に後姿を眺めていた藤白に、突然声がかかった。振り返るとそこには見知った男子生徒の顔。
-「さ、佐竹先輩……？」
-　佐竹庄司。去年文化祭の委員で一緒になって以来懇意にしてもらっている上級生だ。
-「珍しいな、お前がこっち来るなんて。古江さんならもう帰ったぞ？」
-「い、いや、今日は紀佳じゃなくて……」
-　藤白はそう言葉を濁すと、視線を女の子の方へやる。
-「あ、あの一番前の席に座ってる子……なんて名前なんですか？」
-「はぁ？　一番前の席っていうと……」
-　佐竹はそこまで言うと、突然がばっと藤白の肩に手を回し、そのまま廊下まで引っ張っていった。
-「おっなになに？　お前、あいつのこと気になってるわけ？」
-「ちょ、ちょっと苦しいですって！　離してください！」
-「まあまあ、いいじゃねえか。男同士の大切な話だ。周りに聞かれちゃまずいだろ」
-　別にやましい話をしているわけでは無いのだから構わないだろうと思う。
-「ていうか先輩あの人のこと知ってるんですか？　まだクラス分けされて二日目ですよ」
-「あああいつ……青山<ruby>希海<rp>《</rp><rt>のぞみ</rt><rp>》</rp></ruby>って言うんだが、青山さんとは高一の頃に同じクラスだったからな。てかお前、古江さんがいるのにこれ以上新しい子にちょっかい掛けようとは一体どういう了見だ？　答えによっちゃ許さんぞ」
-　そう言って頭を小突いてくる佐竹。一方の藤白はその攻撃から逃れようと肩に回された手を強引に撥ねのける。
-「ち、違いますって！　そういうのじゃないですから！　なんというか……ただ単純にちょっと気になるんですよ」
-「お前なあ……その『ちょっと気になる』が世間でなんて呼ばれてるのか知らんのか」
-　佐竹ははぁと大きくため息をつくと、少しだけ真面目な顔をして藤白に向き直り、
-「まあでも……一応忠告しておくと青山さんはあんまりおすすめしないぞ」
-「な、なんでですか」
-「あいつ男いるから」
-　どくりと、少しだけ心臓が音をたてる。
-「あいつ今でこそあんな明るい色に髪染めてるけどな、昔はもっと暗くてどよーんとしたイメージだったんだぜ？　高一の頃に男と一緒になって下校してるの目撃されてるし、まあ向こうの好みに合わせてイメチェンしたってとこだろ」
-「…………」
-「まあ、そんなわけでだな。悪いことは言わん。諦めろ。略奪愛を良しとするなら話は別だけどな」
-「……本当に、そんなんじゃないですから」
-
-　佐竹と別れた後も、女の子――希海はしばらく教室からでてこなかった。ちらりと様子を窺ってみると机に向かって何か書いているようで、その作業が終わるのを待っているうちにもう十分ほどが経過してしまう。
-　やがて希海はよし、と小さく独りごちると、書類を二つ折りにしてショルダーバッグに詰め込み、机の横にぶら下げていた人民帽をかぶって教室を出てきた。藤白は感付かれないような距離を取りつつその後を付ける。
-　階段を下り、下駄箱で靴を履き替える。そのまま校門を出た後も、藤白は希海の後を歩き続けた。
-（……さすがにこれはまずいか）
-　藤白は思う。
-　何かに突き動かされるようにこうして後を付けてしまっているわけだが、これではまるでストーカーではないか。このまま尾行を続けて一体自分はどうするのか、彼女の自宅を突き止めて、その先になにか良からぬことをする予定でもあるのか。
-　まさか、あるわけがない。さっき佐竹にも言ったが、自分は別にそういうつもりじゃない。ただあの時の涙の訳が気になって、彼女ともう一度だけ話がしたくて、こんな馬鹿馬鹿しい行動を続けているのだ。
-　だったら、自分はどうすべきなのだ？
-　決まっている。もう一度話をするのに、こんな行為は不要だ。彼女の自宅を突き止める必要なんてこれっぽっちもない。
-　やめよう。
-　藤白はそう思った。彼女が次の角を曲がったらこの馬鹿げた尾行もおしまい。そしたら自分も家路につこう。彼女とはまた後日、正々堂々と正面から話しかければいい。
-　だが、希海が次に曲がった角は、藤白の予想だにしない方向だった。
-　彼女が曲がったのは高校からほどちかい道の途中。信号もなければ交差点ですらない、道の中腹である。先週の嵐ですっかりその花を落としてしまった桜並木の下で、希海は踵を帰して右に曲がった。
-　その先にあったものは……
-（びょ、病院……？）
-　その施設の入り口に大きく掲げられていたのは『<span class="simplified">党立精神医疗</span>センター』の文字。いわゆる精神病院だった。
-（な、なんでこんなところに……）
-　立ち尽くす藤白を置き去りにするかのように、希海の背中が小さくなっていく。やがて彼女は入り口から見える一つの建物の扉を開くと、その中の暗闇へと消えていった。
-（…………）
-　一体、彼女の身になにがあったのだろうと藤白は思う。
-　見たところ彼女は別段病気などもっている感じではなかった。いや、今彼女が入っていった場所は精神病院だ。その手の病気は表面上、健常者と何一つ変わらないことなど往々にしてあるのだろう。だから彼女がこの場所へ入っていったということは、そういうことなのだ。
-　いったい彼女は何を患っているのだろう。精神を、心を患っているとして、何が彼女をそうさせたのだろう。
-　不意に、昨日屋上で見た光景が藤白の脳裏をよぎる。風にゆれる柔らかなくせっ毛と、真っ赤な夕日に照らされてきらりと光る涙――
-「……くそっ」
-　そうつぶやき、藤白は建物の敷地へと足を踏み入れた。あのとき希海が見せたあの涙。あの涙の理由がこの先にあるのだと思うと、このまま帰るなんて……帰って、また次に会ったとき素知らぬ顔をするだなんて藤白にはできなかった。
-　一体自分は何をやっているんだと思う。
-　流石にここから先は彼女の私生活に関わる部分だ。そんなところに土足で踏み込むだなんて正気かと、自分の中の冷静な部分が声を大にして主張する。だが知った事か。藤白には自分が、あの異世界で出会った女の子に対する思いが、どうしても止められなかった。
-　病院の敷地内を小走りに駆け抜け、女の子の入っていった扉の前にやってきた。そこに書かれていたのは『<span class="simplified">关系者以外立</span>ち<span class="simplified">入</span>り<span class="simplified">禁止</span>／Staff Only』の文字。だが藤白はそんなもの気にも留めない。知った事かと言わんばかりの堂々とした動作で扉を開き、その中の長い長い灰色の廊下へと足を踏み入れた。
-（……いた！）
-　女の子は、ちょうど突き当りの角を曲がろうとしていたところだった。藤白は走って彼女に追い付くと、そのまま、また尾行を再開することにした。廊下の曲がり角に身を隠し、息を殺してひたりひたりと女の子の後を付ける。そして女の子がある一つの扉の前で立ち止まり、そのドアノブに手を掛けたそのとき、
-「おいお前、何してんだ」
-　背後から突然声。心臓が飛び出るかと思う。
-　振り返った先に居たのは、軍服を来た壮年の男。年の頃は三十代の前半といったところか、軍人特有のもみあげを落とした短髪に、軍人らしからぬ眼鏡。
-「あ、い、いや、これはその……」
-　なんでこんなところに解放軍の人間が。ここは病院じゃなかったのか。だが、そんな藤白の疑問が口をついて出るより先に、
-「ここで登録してる学生じゃないよな。見覚えないし、お前、さっきから青山の後付けてたみたいだけど、一体何のつもりだ」
-「え、えっと、すいません。その……」
-「何してたかって聞いてんだよ。謝れなんて言ってない」
-　男の高圧的な詰問にたじろぐ藤白。頭のなかはもう真っ白だった。
-「えっと……その……俺はあの青山って人と昨日会ったばっかりなんですが……今日彼女のことを学校で見かけて……それでもう一度話したいなって思って……それで気付いたらこんな場所まで後を付けてしまって……それで……」
-　みるみる萎縮していく藤白とは裏腹に、黙ってその言葉を聞いていた男は呆れ顔に変わっていく。
-「はぁ？　てことはアレか。お前、青山のことが気になって、それでこんな立ち入り禁止の場所まで来てしまったってわけか？」
-「あ、はい……そういう……ことです」
-　そこまで言い切ると、男は突然声を上げて笑い出す。
-「あはははは、なんだよそれ、そんな下らないことで――ああ、いや本人にとっては下らなくないのか、あははは」
-「あ、あの……」　
-　男はひとしきり笑うと、落ちついて藤白の方へ向き直る。
-「いや、悪かった悪かった。まあでも、せっかくだしな、茶でも飲んでいけよ」
 </div>
 
     <div id="footer" v-component="metastable-page-footer"></div>
