--- a/metastable3/1-03.html
+++ b/metastable3/1-03.html
@@ -13,103 +13,102 @@
   <div v-component="metastable-page-header"></div>
 <div class="contents">
 <div class="text">
-　男に連れて行かれたのはそこからほど近い個人用の執務室だった。
-「緑茶でよかったよな？」
-　そう言って男は藤白の座っている席に湯呑みを差し出すと、自らも応接用の椅子に腰掛けた。
-「さて、じゃあまあ世間話でも……って顔じゃねーな」
-「当たり前ですよ。一体何なんですか」
-「ああ、悪い悪い。まあお前も……ってそういや名前聞いてなかったな。俺は<ruby>津雲<rp>《</rp><rt>つくも</rt><rp>》</rp></ruby>。見りゃあわかると思うが、解放軍の者だ」
-「藤白貴和です。なんで解放軍の人がこんなところに……？」
-　それが藤白の今の一番の疑問だった。自分は精神病院に来たはずなのに、どうしてこんな風に軍人と向い合って茶を飲んでいるのか。彼女は……希海は一体何のためにこんな場所へ来たのか。何から何まで分からないことだらけだった。
-「そうだな……。藤白、お前、ニューロワームって知ってるか？」
-「……名前くらいは」
-　ニューロワーム、その単語にどきりと心臓が音を立てた。
-「ニューロワームってのはな、大気中のオルゴン場を介して高等生物の人の脳から脳へと感染していく、いわゆる情報生命体なんだ。こいつに感染すると、脳機能に障害をきたして、頭がおかしくなったり、寝たきりになってしまったりするわけだ」
-　その辺りのことは藤白もなんとなくは知っている。オルゴン場がどうのとか、情報生命体がどうのとか、そういう難しそうなところは分からないが、ついこの間身近な人間に感染者が出たからだ。その人間とは……紀佳のことであるのだが。
-「んでそのニューロワームだがな。実は昨今、軍事利用の研究が各国で盛んなんだ。まずは米国が目をつけて、その後に中国も開発を始めると、火が着いたように世界中で軍事目的の研究が始まった。そしてウチの国でも世界の潮流に乗っかって、数年前から研究部門を立ち上げたわけだが、この病院はそれの臨床データを提供する場として俺たち解放軍と提携している……というわけさ」
-　なるほど、と藤白は思う。それでこんな病院に、不釣り合いな軍服姿の人間が居たのか。だが、疑問はそれだけではない。
-「じゃあ彼女もその研究に関係して……ここに来てるんですか？」
-「ん、ああ青山か？」
-　思えばここは病院といえど一般患者の出入りするような外来ではない。ここまで受付の一つと目に入らなかったし、そもそも建物の入り口に立入禁止の札が掲げられていたではないか。
-「まあそんなとこだな。」
-　津雲と名乗った男は藤白のそんな考えを肯定するようにゆっくりと頷く。
-「そのニューロワームに感染した場合なんだが……ああ、兵器としてのそれじゃなくて、自然にいるヤツだぞ？　自然のニューロワームに感染した場合、一番多く見られる症状が『眠ったままになる』っていうものだ。これは閉律症って呼ばれてるわけだが、この閉律症の治療には少しばかり特殊な資格が必要でな。その資格を持ってる青山はここの病院で治療行為をしつつ、俺たち解放軍に臨床データを提供してくれている、というわけだ」
-　なるほど。つまり彼女はなにか悪いところがあってこの精神病院に通院しているわけではなく、つまり治す方だということだ。
-「でも治すって……。医者でもない、俺と同じような高校生がそんな高度なことできるんですか？　それに治すって具体的に何をやって……？」
-「それについてはな。お前とこうして茶をしばいてる理由にも繋がる話なんだが……」
-　そうしていると、背後でドアがノックされた。コンコンという乾いた音が執務室に響き、二人の意識がそちらへ向けられる。
-「おう、入ってくれ」
-「失礼します――って……」
-　ドアノブががちゃりと回り、蝶番が音を立てる。部屋に入ってきた人物は、以外にも藤白がよく知る顔だった。
-「カズくん……？」
-「の、紀佳っ！？」
-　互いが互いの存在を予見していなかった藤白と紀佳は二人して素っ頓狂な声を上げる。
-「おう、お前が古江紀佳か。よく来てくれた。まあとりあえずそこに座れよ」
-　津雲に促されて紀佳は藤白の隣に腰掛ける。
-「なんでカズくんがここにいるんですか？」
-「それはこっちのセリフだって。なんで紀佳がここに」
-「この間、閉律症の治療が終わった時に、なんか案内が来たからだよ。『特定精神医療従事者募集のご案内』とかいう十ページくらいの小さい冊子。ちょっと興味あったから、それに載ってた案内窓口に行ったらここに通されたってわけ。それで、カズくんは？」
-「俺は――」
-　口を開きかけて藤白ははっとする。流石に『女の子の後を付けて建物に侵入したら見つかってここに連れて来られた』なんて言えるはずがない。
-「こいつ……藤白とはついさっき会ったばかりなんだがな。いやちょっとスジが良さそうだったから、スカウトしてみたってとこさ」
-　どう説明したものか思案していたところに津雲が助け舟を出してくれた。スカウト云々の部分は初耳も甚だしいがまあ、方便というやつなのだろうと藤白は納得することにする。
-「スジ……ですか」
-　紀佳は訝しむような視線で藤白を凝視するが、そんな紀佳の疑念を打ち消すように津雲はパンとひとつ手を叩くと
-「よし、じゃあ人も揃ったことだし、本題に入ろうか」
-　そう言っておもむろに話を始めるのだった。
-「今日、二人に……まあ藤白は飛び入りだが、こうして二人に集まってもらった理由は他でもない資質検査のためだ」
-「資質？」と藤白。
-「ああ、さっき説明しただろう。精神医療従事者になるための資質検査だ」
-「なっ！？　俺、初耳ですよ！？」
-「あ？　そうだったか？　まあいいだろ。費用はこっちで負担してやるんだから、検査くらいしていけよ。適正がなかったら『はいさよなら』だし、適正がありゃその時にまたどうするかじっくり考えりゃいい。それに――」
-　津雲はそこまで言うとぐいと藤白に顔を寄せ
-「青山希海に近づきたいんだろ」
-　隣の紀佳に聞こえないよう、小声でそう告げる。
-「――っ！？」
-　突然出てきたその名前に盛大にむせ返してしまう藤白。
-「はっはっはっ、若いってのはいいなあ」
-「…………？」
-　男二人のやりとりに紀佳が怪訝そうに眉をひそめた。
-
-　その後、紀佳と二人で病院内の検査室を回って採血をしたり、脳波を測ったりする。その途中、藤白は紀佳から精神医療従事者について二、三の説明を受けた。その内容はこう。
-　まず第一に、閉律症はニューロワームに感染して発症する精神の病である。閉律症を患うと精神が閉鎖状態に陥ってしまい、外見的には寝たままになってしまう。
-　第二に、その治療は患者の脳と作業者の脳を機械で繋ぎ、直接患者の精神に入り込むことによって行う。
-　この『患者の精神に入り込む』という点が曲者だ。
-　閉律症を発症してしまう直接的な原因はニューロワームによるものだが、そもそも精神状態が健全な人間は通常の免疫力によってニューロワームに感染することはほとんどない。なんらかの原因によって精神の免疫が弱った状態にあってはじめて、ニューロワームに感染してしまうのだ。つまり患者の多くは、現実世界でなんらかの問題を抱えている。
-　そして、その患者の少なくない割合の者が、閉鎖された精神世界から外へ出ることを拒絶する。自らを苛む世界で生きることよりも、心を煩わせることがない、平穏な閉じた世界で生きることを望むのだ。
-　そして第三に、このように元の世界へ帰ることを拒絶した患者をどう治療するのか。答えは簡単。力づくで、無理矢理に連れ戻すのである。
-「無理やりって……どうやって？」
-　病院の白い廊下を歩く藤白が聞いた。
-「私もまだ自分でやったことないからよく分からないけど、何か戦ったりすることもあるみたい」
-「そりゃまた物騒な話だな」
-「あ、でも結構簡単みたいだよ。患者の夢の中に入り込む感じらしいから、戦って、その結果怪我とかしちゃっても現実には何も影響はないって言われた。他人の夢の中でも振り回されずに自分の夢を展開する能力？みたいなのをこの検査で測ってるみたい」
-　そう言って紀佳は自分の検査結果が書かれたカルテに目を落とす。
-「過去に閉律症を患った人はその能力に秀でてることが多いらしくて、私に案内が来たのもそういう理由みたい」
-「なるほどな……。そういえば紀佳のときはどうだったんだ？」
-「私？」
-「ああ。紀佳が……その……閉律症になったときは、やっぱりそういうきな臭い話になったりしたのか？」
-　つい先日の出来事が藤白の脳裏に蘇る。ぐったりとしたまま目を覚まさない紀佳と、そんな紀佳を前にして右往左往する自分。あの時のことを思い出すと、藤白の言葉尻が自然と重くなっていく。
-「私は素直に帰ることにした。だから、そういう戦ったりとかはなかったかな」
-　ひょっとすると紀佳はこっちの世界に帰ってきたくなかったんじゃないか。帰ってきたくないのに、力づくで無理矢理に連れ戻されたのではないか。そんな事を考えていた藤白は、その言葉に少しだけ救われた気分になる。
-「じゃあもし俺たちがこのなんとか従事者ってヤツになったとしたら……、その時は戦ったりとか、嫌がる人を無理矢理に連れ戻したりしないといけないってわけか……」
-「うん。でも私はその辺結構割り切ってる。だって、中にはちゃんと呼びかけに応じて帰ってくれる人だっているわけだし。言葉を尽くして、それでもダメなときは、もう仕方ないと思う。それに……」
-　紀佳はそう言うと前を向き、いつもの仏頂面に戻る。
-「それに私何も部活動してないでしょ？　だから時間は沢山ある。こういうことやってたら大学入試に有利になるみたいだし、それにお金も入るらしいしね。だからちょっとやってみようかな、って思った。カズくんも、もし適正があったら一緒にやろうよ。一人より二人の方が心強いし」
-「ああ、そうだな。俺も実はちょっと興味あるんだよ。だからこの検査が上手くいけばやってみようと思ってる。それに……ちょっと気になることもあるしな」
-　そんな話をしながら病院中を歩きまわり、検査を終えた。
-　そして今、二人は再び津雲の執務室まで戻ってきている。
-「終わりました」
-「おう、早かったな。もっと時間かかるかと思ってたんだが」
-「けっこう空いてたんで、凄くスムーズでしたよ」
-　そう言って藤白と紀佳は持っていた検査表を手渡した。津雲はそれを受け取ると、指でなぞりながらそれを読み進めていく。
-「うん。古江に関しては……何も問題ないっぽいな。血中バイオン濃度も十分だし、<ruby>虚想受容性<rp>《</rp><rt>ネガティブケイパビリティ</rt><rp>》</rp></ruby>も申し分ないくらいに高い。薬物アレルギーも特にないみたいだし、いけるだろ。そんでもって藤白は……」
-　津雲はそこまで言うと、もったいぶるように言葉を詰まらせた。その仕草に、藤白の鼓動が自然と速くなっていく。
-「おめでとう。適正ありだ！　まあ各種の数値は下限ギリギリだが、それ以外は特に問題は見当たらないし、大丈夫だ」
-　やった、と。藤白は心のなかで小さくガッツポーズをした。別に精神医療従事者になりたいわけでもないが、自分にもできることがある、と言われるのは嫌ではない。
-「正式な認可はまた後日だがな。まあでも普段の素行によほど問題があるとか、血縁者にテロリストや外国人がいるってことでもない限りは大丈夫さ」
-　津雲はそこまで言い切ると、ポケットをあさって中からジャラジャラとした鍵の束を取り出してみせる。
-「じゃあとりあえず部屋出るか。仕事仲間に会っておきたいだろ？　な？」
-　その意地悪そうな視線は明らかに藤白を捉えていた。
+　
+　放課後。
+　始業式翌日の授業なんてものはたいていがオリエンテーションみたいなもので、教師の自己紹介だとかどういう風に勉強を進めるだとかの話で授業の半分くらいが潰れてしまう。おまけに今年度から藤白の担任となった先生はいわゆる『あたり』で、授業後のホームルームが著しく短いことで有名だった。
+　そんなわけで、現在ホームルームを終えた教室の中には、一日で浪費すべきエネルギーを有り余らせた生徒達が、思い思いの放課後を胸に描きながら帰り支度をしている最中だった。
+　そしてそれは藤白も同じである。
+　急いで身支度を済ませ、一緒に帰ろうという友人の誘いを断って廊下に飛び出た。向かうは三年六組の教室。あの女の子のクラスである。藤白は大股で渡り廊下を歩くと、そのままの勢いに階段を登って３－６の前までやってきた。
+　塗りたてのワックスが光沢を放つ新学期の廊下。どのクラスもまだホームルームの最中なのか、教室の前はひっそりと静まり返っていた。藤白はそのうちの一つ扉からこっそりと中を窺ってみる。
+（げっ……そういえば紀佳もこのクラスだった）
+　真っ先に目に飛び込んできたのは見覚えのある後ろ姿。最後尾の席に座った紀佳はボケっとした顔で担任の話に耳を傾けている。だがこの小さな窓からはどんな角度で覗いてみても、お目当ての女の子の姿は見当たらない。ここからは死角になっている前の方の席なのだろうか。
+　そんなことを考えているうちにホームルームが終わり、教室内がにわかに活気づきはじめた。藤白は教室のなかを覗きこむのをやめ、腕を組んでさも誰かを待っているそぶりをする。担任と思しき教師が部屋から出てくると、ついで雪崩をうったかのように教室からぞろぞろと生徒が出てきた。その一団に探し求めている女の子の背中がないか、藤白はしばらく目を凝らして探してみた。途中紀佳が出てきたときは慌てて後ろを向いたが、それ以外はずっと注意を切らさない。
+　だがいくら待ってみてもお目当ての女の子はなかなか姿を現さない。
+（後ろ向いてる間に出て行ってしまったのか……？）
+　そんな不安が頭をよぎるが、仮にそうだとしたらもう手遅れだ。だが過ぎてしまったことを今更悔いても仕方がなく、今は女の子がまだ教室内に残っている可能性にすがるしかない。
+（ていうかもういっそのこと……）
+　自分から教室に入ってしまおうか。
+　脳裏にそんな考えが浮かぶが、よその教室に入るのはなんだか抵抗があり、ましてや話したこともない人を訪ねるのは非常に気が重い。
+　だが幸いにも今日は新学年がスタートしてまだ二日目だ。教室に慣れていないのはそこの住人も同じことであって、まだクラスの面々も覚えきれていない人だって多いだろう。そこに知らない顔が一つ増えたところで、さして怪しまれることはない。
+　そう考え、藤白は『よし』と一つ決意をして中に入ってみることにした。少し緊張した面持ちでドアに手を掛け、がらりと戸を引いて中へ入る。教室内に居たのはホウキを片手にじゃれあう男子生徒や机に腰掛けて談笑する女子生徒。そしてそれらノイズのような人混みの向こう側に――
+（……いた！）
+　探していた女の子は、窓際の一番前の席に座っていた。後ろからで顔はよく見えないが、あのふわりとした明るい髪色は、まさに彼女に違いなかった。
+「おう藤白、何してんだ？」
+　突然、背後から声。振り返るとそこには見知った男子生徒の顔があった。
+「さ、佐竹先輩……？」
+　そこに居たのは少しひょろっとした短髪の男子生徒。去年文化祭の委員で一緒になって以来懇意にしてもらっている上級生だった。
+「珍しいな、お前がこっち来るなんて。紀佳ちゃんならもう帰ったぞ？」
+「い、いや、今日は紀佳じゃなくて……」
+　藤白はそう言葉を濁すと、視線を女の子の方へやる。
+「あ、あの一番前の席に座ってる子……なんて名前なんですか？」
+「はぁ？　一番前の席っていうと……」
+　佐竹はそこまで言うと、突然がばっと藤白の肩に手を回し、そのまま廊下まで引っ張っていった。
+「おっなになに？　お前、あいつのこと気になってるわけ？」
+「ちょ、ちょっと苦しいですって！　離してください！」
+「まあまあ、いいじゃねえか。男同士の大切な話だ。周りに聞かれちゃまずいだろ」
+　別にやましい話をしているわけでは無いのだから構わないだろうと藤白は思う。というかこんな風に騒いでいる方が周りの注目を集めてしまうのでやめてほしい。
+「んで、お前はあいつの何が知りたいんだ？」
+　連れて行かれた廊下。佐竹は藤白の肩に腕を回したままの姿勢で、心底嬉しそうな表情で質問を投げかける。
+「ていうか先輩あの人のこと知ってるんですか？　まだクラス分けされて二日目ですよ」
+「あああいつ……。あいつ青山<ruby>希海<rp>《</rp><rt>のぞみ</rt><rp>》</rp></ruby>って言うんだが、青山さんとは高一の頃に同じクラスだったからな。てかお前、紀佳ちゃんがいるのにこれ以上新しい子にちょっかい掛けようとは一体どういう了見だ？　答えによっちゃ許さんぞ」
+　そう言って頭を小突いてくる佐竹。藤白は肩に回された腕ごと強引にそれを撥ねのけ、
+「ち、違いますって！　そういうのじゃないですから！　なんというか……ただ単純にちょっと気になるんですよ」
+「お前なあ……その『ちょっと気になる』が世間でなんて呼ばれてるのか知らんのか」
+　佐竹ははぁと大きくため息をつくと、少しだけ真面目な顔をして藤白に向き直り、
+「まあでも……一応忠告しておくと青山さんはあんまりおすすめしないぞ」
+「な、なんでですか」
+「あいつ男いるから」
+　どくりと、少しだけ心臓が音をたてる。
+「あいつ今でこそあんな明るい色に髪染めてるけどな、昔はもっと暗くてどよんとした雰囲気だったんだぜ？　高一の頃に男と一緒になって下校してるの目撃されてるし、まあ向こうの好みに合わせてイメチェンしたってとこだろ」
+「…………」
+「まあ、そんなわけでだな。悪いことは言わん。諦めろ。略奪愛を良しとするなら話は別だけどな」
+「……本当に、そんなんじゃないですから」
+　佐竹と別れてからしばらく経った後も、女の子はしばらく教室からでてこなかった。ちらりと様子を窺ってみると机に向かって何か書いているようで、その作業が終わるのを待っているうちにもう十分ほどが経過してしまう。
+　やがて女の子はよし、と小さく独りごちると、書類を二つ折りにしてショルダーバッグに詰め込み、机の横にぶら下げていた人民帽をかぶって教室を出てきた。一方の藤白は感付かれないように距離を取りつつその後を付ける。階段を下り、下駄箱で靴を履き替え、そのまま校門を出た後も、ただひたすらに女の子の後を歩き続けた。
+（……さすがにこれはまずいか）
+　不意にそんなことを思う。
+　何かに突き動かされるようにこうして後を付けてしまっているわけだが、これではまるでストーカーではないか。このまま尾行を続けて一体自分はどうするのか、彼女の自宅を突き止めて、その先になにか良からぬことをする予定でもあるのか。
+　まさか、あるわけがない。さっき佐竹にも言ったが、自分は別にそういうつもりじゃない。ただあの時の涙の訳が気になって、彼女ともう一度だけ話がしたくて、こんな馬鹿馬鹿しい行動を続けているのだ。
+　だったら、自分はどうすべきなのだ？
+　決まっている。もう一度話をするのに、こんな行為は不要だ。彼女の自宅を突き止める必要なんてこれっぽっちもない。
+　やめよう。
+　藤白はそう思った。彼女が次の角を曲がったらこの馬鹿げた尾行もおしまい。そしたら自分も家路につこう。彼女とはまた後日、正々堂々と正面から話しかければいい。
+　だが、希海が次に曲がった角は、藤白の予想だにしない方向だった。
+　彼女が曲がったのは高校からほど近い道の途中。信号もなければ交差点ですらない道の中腹である。先週の嵐ですっかりその花を落としてしまった桜並木の下で、彼女はかくりと右に曲がる。そしてその先にあったものは……
+（びょ、病院……？）
+　その施設の入り口に大きく掲げられていたのは『<span class="simplified">党立精神医疗</span>センター』の文字。いわゆる精神病院だった。
+（な、なんでこんなところに……）
+　立ち尽くす藤白を置き去りにするかのように、女の子の背中が小さくなっていく。やがて彼女は入り口から見える一つの建物の扉を開くと、その中の暗闇へと消えていった。
+（…………）
+　一体、彼女の身になにがあったのだろう。
+　見たところ別段病気などを持っている感じではなかった。いや、今彼女が入っていった場所は精神病院だ。その手の病気は表面上、健常者と何一つ変わらないことなど往々にしてあるのだろう。だから彼女がこの場所へ入っていったということは……多分そういうことなのだ。
+　いったい彼女は何を患っているのだろう。精神を、心を患っているとして、何が彼女をそうさせたのだろう。
+　不意に、昨日屋上で見た光景が藤白の脳裏をよぎる。風にゆれる柔らかなくせっ毛と、真っ赤な夕日に照らされてきらりと光る涙――
+「……くそっ」
+　そうつぶやき、藤白は建物の敷地へと足を踏み入れた。あのとき希海が見せたあの涙。あの涙の理由がこの先にあるのだと思うと、このまま帰るなんて……帰って、また次に会ったとき素知らぬ顔をするだなんて藤白にはできなかった。
+　一体自分は何をやっているんだと思う。
+　流石にここから先は彼女の私生活に関わる部分だ。そんなところに土足で踏み込むだなんて正気か？　自分の中の冷静な部分が声を大にして主張する。知った事か。藤白には自分が、あの異世界で出会った女の子に対する思いが、どうしても止められなかった。
+　病院の敷地内を小走りに駆け抜け、女の子の入っていった扉の前にやってきた。そこに書かれていたのは『<span class="simplified">关系者以外立</span>ち<span class="simplified">入</span>り<span class="simplified">禁止</span>／Staff Only』の文字。だが藤白はそんなもの気にも留めない。まるで自分が部外者であることを忘れてしまったかのような堂々とした動作で扉を開き、その中の長い長い灰色の廊下へと足を踏み入れると、
+（……いた！）
+　女の子は、ちょうど突き当りの角を曲がろうとしていたところだった。藤白は走って彼女に追い付くと、そのまま、また尾行を再開することにした。廊下の曲がり角に身を隠し、息を殺してひたりひたりと女の子の後を付ける。そして女の子がある一つの扉の前で立ち止まり、そのドアノブに手を掛けたそのとき、
+「おいお前、何してんだ」
+　背後から突然声。心臓が飛び出るかと思う。
+　振り返った先に居たのは、軍服を来た壮年の男。年の頃は三十代の前半といったところか、軍人特有のもみあげを落とした短髪に、軍人らしからぬ悪ガキのような顔つき。
+「あ、い、いや、これはその……」
+　なんでこんなところに解放軍の人間が。ここは病院じゃなかったのか。だが、そんな藤白の疑問が口をついて出るより先に、
+「ここで登録してる学生じゃないよな。見覚えないし、お前、さっきから青山の後付けてたみたいだけど、一体何のつもりだ」
+「え、えっと、すいません。その……」
+「何してたかって聞いてんだよ。謝れなんて言ってない」
+　男の高圧的な詰問にたじろぐ藤白。頭のなかはもう真っ白だった。
+「えっと……その……俺はあの青山って人と昨日会ったばっかりなんですが……今日彼女のことを学校で見かけて……それでもう一度話したいなって思って……それで気付いたらこんな場所まで後を付けてしまって……それで……」
+　みるみる萎縮していく藤白とは裏腹に、黙ってその言葉を聞いていた男は呆れ顔に変わっていく。
+「はぁ？　てことはアレか。お前、青山のことが気になって、それでこんな立ち入り禁止の場所まで来てしまったってわけか？」
+「あ、はい……そういう……ことです」
+　そこまで言い切ると、男は突然声を上げて笑い出す。
+「あはははは、なんだよそれ、そんな下らないことで――ああ、いや本人にとっては下らなくないのか、あははは」
+「あ、あの……」　
+　男はひとしきり笑うと、落ちついて藤白の方へ向き直る。
+「いや、悪かった悪かった。まあでも、せっかくだしな、茶でも飲んでいけよ」
 </div>
 
     <div id="footer" v-component="metastable-page-footer"></div>
