--- a/metastable3/1-05.html
+++ b/metastable3/1-05.html
@@ -13,67 +13,219 @@
   <div v-component="metastable-page-header"></div>
 <div class="contents">
 <div class="text">
-　時刻は夕方の六時。薄暗くなり始めた執務室には津雲と藤白が二人で向かい合っていた。
-「なるほどな」
-　津雲は藤白から報告を受けるとうん、と一つ頷き
-「つまり、お前の<ruby>表現<rp>《</rp><rt>リプリゼンテーション</rt><rp>》</rp></ruby>は触れた人間と言葉を介さずに意思疎通をする能力。んで古江は身体強化ってとこか」
-　そう言って緑茶をずずとすする。ちなみに希海と紀佳は藤白より前に面談を終えてしまって、もうさっさと帰ってしまったらしい。藤白が最後の一人である。
-「いや、そんな呑気な話じゃないですよ……。ホントにびっくりしたんですから。まさかあんな物凄いケンカになるなんて……」
-　ケンカと言うと少しだけ語弊がある。さっき起こったことはあくまでも模擬戦だ。だが希海も紀佳もその表情は真剣そのもので、横で傍観していた藤白にとっては両者はあまり大差のないように思えた。
-「確かにかなり熱は入ってたみたいだな。だが実戦だって概してあんなもんらしいぞ？　いや、らしい、っていうのは俺が実際に見たわけじゃないからこんな言葉を濁した表現になるんだが……。まあでも色んな特定精神医療従事者の話を聞く限りどれもそんな感じだ。かなり本気でドンパチやるらしい。それこそ殺し合いに近いレベルで」
-　殺し合い。その言葉を聞いて藤白は少しだけ不安に駆られる。さっきも自分は争う二人をただ見ていることしかできなかった。その前だって希海にいいように遊ばれて手も足もでなかった。そんな自分が、本当にこの業務を上手くこなせるのだろうか。
-「おいおい、何深刻そうな顔してんだ。不安にでもなったか」
-「あ、いえ……てか……はい。そうですね」
-「まあ、その不安は正しい。実際にお前の能力だとドンパチやるのは難しそうだし、一人でルーミングをやるのはかなり荷が重いだろうな。だが……」
-　津雲はそう言うと、またいつものように悪ガキのような表情を浮かべて笑う。
-「だが、安心しろ。それは去年までの話だ」
-「というと……？」
-「そういえば、お前らにはまだちゃんと話してなかったんだがな。ウチでは今年からルーミングは三人一組でやることになったんだ。まあ試験的に、っていう但し書きが付くが。えーっとどこだっけな」
-　津雲は立ち上がり、机の上に乱雑に置かれた資料の類をあれでもないこれでもないと、開き始める。
-「あった。ほらこれだ。見てみろ」
-　そう言って藤白に差し出されたのは、一枚のＡ４サイズのプリントだった。そこには何やら難しいお役所言葉が細かく書かれている。
-「えっとこれは……？」
-「ああ、お前が見てもよく分からんだろうから雰囲気だけを感じ取ってもらえたらいい。それは上からのお達しの書類だ。注目してほしいのはそのタイトル。学生精神医療従事者における四重極ルーミングなんちゃら……って書かれてるだろ？」
-　プリントの上部に目をやると確かに『<span class="simplified">学生精神医疗从事者</span>における<span class="simplified">四重极</span>ルーミングの<span class="simplified">试验的运用</span>に<span class="simplified">关</span>して』とゴシック体で書かれている。
-「この四重極ルーミングっていうのは？」
-「おう、まさにそれだ。従来のルーミングは<ruby>双極<rp>《</rp><rt>ダイポール</rt><rp>》</rp></ruby>型……つまり一人の患者と一人の作業者を繋いで治療する形式で行われていたわけだ。何でかっていうと、これが一番安定してるから。つまり患者と作業者合わせて二人になる場合が一番簡単にできるんだよ。だが患者と作業者の数が合わせて三人以上になると途端に不安定になってしまって上手いこと精神を接続できないことが実験的にも理論的にも示されていたわけだ」
-　話が途端に難しくなってしまって藤白は目を白黒させる。津雲はそんな藤白に少し呆れたようにため息をつくと
-「おいおいこれくらいはさっと理解して欲しいぞ？　つまりだなあ、今までは患者一人に対して作業者一人じゃないと上手くいかなかったんだよ。ところが最近、実験的にその例外が発見された。それが<ruby>四重極<rp>《</rp><rt>クアドロポール</rt><rp>》</rp></ruby>ルーミング。つまり患者と作業者が合わせて四人の場合だと、不思議とこれが安定するらしい。いや厳密には安定じゃなくて<ruby>準安定数４<rp>《</rp><rt>メタステーブル・フォー</rt><rp>》</rp></ruby>なんて名前で呼ぶらしいが、俺も専門家じゃないから詳しくは知らん」
-「えっと、つまり……？」
-「つまりお前や古江をスカウトしたのはそういう理由なわけだ。今まで青山一人でやってて……、まあ昔は相方みたいなのも居たんだけどな。そいつが大学生になってやめちまって、青山一人になってたんだが……ってこの話はいいか。とにかく、これからは青山とあと二人でチームを組んでルーミングに当ってもらうことになった。お前や古江が新たに連れて来られたのはそのためだな」
-「ち、チームですか……」
-「おう。そうだ。三人一組ならお前みたいな実戦向きじゃない能力だって活用の場が出てくるだろ。遠距離に強い青山と、接近戦に強い古江。そんでもって補佐のできるお前がいればメンバーのバランスも丁度いい。俺もまさかこんなにバッチリハマるとは思ってなかったが、案外いい感じに収まるもんだな。それに――」
-　津雲はそこまで言い切ると、意地悪そうな笑みを浮かべる。
-「お前も青山と一緒のチームになれて嬉しいだろ？」
-「なっ……！」
-　不意を突かれた形になり思わず素っ頓狂な声を上げてしまった。心なしか顔が赤らんでるような気さえする。津雲はそんな藤白を茶化すかのように「若いってのはいいなあ！」などど高らかに笑い声を上げていた。
-「あ、そうだ。一つだけ注意しておくとな……」
-　それまで大笑いしていた津雲が急に真面目な顔に戻る。
-「まあここにはチーム内での恋愛が禁止だとか、『清く正しくお付き合いしましょう』だとか、そんな頭の硬いルールなんてない。だが、ただ一つだけ……これだけは絶対に守れよ。いいか……？」
-　そして津雲は藤白にずいと顔を寄せる。藤白はその真剣な様子にごくりと息を飲むと
-「精神空間内での不純異性交遊は厳禁だ」
-　むせた。
-「な、何言ってるんですか！　しませんよそんなこと！」
-「お、そうか？　でもお前ら若いしな。ルーミングは三人で行うとはいえ、どんな過ちが起こるか分からんからな」
-　仮に、もしも万が一、何か天変地異でも起こって自分と希海がそういう関係になったとしても、患者や紀佳のいる場所でそんなことするわけがない。というか所構わずそんな行為をしでかす人間だと認識されてるかと思うとかなり心外だった。
-「津雲さんは俺をどういう人間だと思ってるんですか……」
-「ああ、すまんすまん。まあでもこれだけはちゃんと言っておかなきゃいけなくてな。何故かと言うと精神空間内でそういう行為に及ぶのはかなり危険だからだ」
-「……なんで危険なんですか？」
-「ルーミングやオルゴンといったものは性欲と深い関係にあって精神空間内でオルガスムスを感じると没入の深度が大幅に上がるからだ。ていうか俺がお前をスカウトしたのも似たような理由なんだなこれが。知ってるか？　恋をすると血中バイオン濃度や<ruby>虚想受容性<rp>《</rp><rt>ネガティブケイパビリティ</rt><rp>》</rp></ruby>が通常人よりも大幅に高まるなんて研究結果がある。つまりあんなストーカーまがいのことをしでかすほどに青山に惚れているお前なら、ひょっとして精神医療従事者の適正があるんじゃないかと踏んだわけだ」
-　悲しいかな、その読みは大当たりだったということだ。だが藤白はまだ納得がいかない。自分は別に、そういう下心で希海の後をつけていた訳ではなく単にあの日の……あの涙の<ruby>理由<rp>《</rp><rt>わ　け</rt><rp>》</rp></ruby>が知りたかっただけなのだ。
-　だが現実に津雲の読みが的中して自分に精神医療従事者の適性がアリだと判断されてしまった事実は重い。自覚がないだけで、自分はやっぱりそういう理由から希海のことが気にかかってしまっているのだろうか。
-「まあ、そんなわけで今日はこの辺にしておくか。気をつけて帰るんだぞ」
-「あ、はい……。それじゃあまた」
-　藤白は適当に挨拶をして執務室を出ると、人民帽を目深にかぶり直してそのまま長い長い病院の廊下を歩き始めた。今日はじめて来た場所だったが、検査にルーミングにと、もう何度も往復した道なので既に地図は頭のなかに入っている。トイレの前を横切り、掲示板の貼られている角を右に曲がって突き当りをまっすぐ左へ歩けば、そこは一番最初に入ってきた関係者用の出入口だ。
-　少しだけ重い鉄製の扉に手を掛け、すっかり暗くなってしまった屋外へ出た次の瞬間。
-「あ、ふ、藤白くん」
-　その場に待ち構えていた人物から声がかかった。振り返るとそこにいたのは校則違反間違いなしの明るいくせっ毛をした少女。
-　希海だった。
-「先輩！？　先に帰ったはずじゃ……？」
-「津雲さんに『今日のことちゃんとフォローしとけ』って言われてさ。ずっと待ってたの」
-　その名前を聞いた瞬間、悪ガキのようにニヤつく津雲の顔が脳裏に浮かんだ。フォロー云々は多分方便で、いらぬお節介を焼いてくれたというのが実際のところなのだろう。だが……。
-「先輩、家どっち？　ど、どうせなら帰りながら話そうぜ」
-　だが今回ばかりはそのお節介に乗っからせてもらおう。そう思う藤白だった。
+　精神医療センターの真っ白な廊下。
+　その一角にある小さな休憩室の扉を、津雲はノックもせずに開いた。
+「おう、青山いるか？」
+「あれ？　津雲さん、どうしたんですか」
+「いや、前に言ってただろ<ruby>四重極<rp>《</rp><rt>クアドロポール</rt><rp>》</rp></ruby>ルーミングの話。アレの人材が内定したんだ。正式な認可はまだ先なんだが早めに紹介しておこうと思ってな。ほら、お前ら入れ」
+　津雲に急かされ、まず紀佳が部屋に入り、それに藤白が続いた。六畳くらいの大きさの部屋には机とソファが置かれており、壁に設けられた本棚には何やら難しそうな本が並んでいる。
+　そして少し緊張したような面持ちで部屋の中央に立つ女の子。あの時、屋上に通じる階段の踊り場で出会った、あの少女がそこに居た。
+「あ……あれ？　あなた確か……」
+　その女の子、青山希海は少し混乱したような様子で藤白と紀佳を交互に見つめる。無理もない。片方はさっきまで同じ教室で授業を受けていた人物で、もう片方も前日に見た顔だったからなのだろう。
+「おう。そういや青山と古江は面識があったな。まあでもせっかくだし改めて自己紹介でもするといい、ほらじゃあまず青山から」
+「な、なんで私からなんですか」
+「だってこの業界じゃお前が先輩だろ。ほら、ぶつくさ言ってないでさっさと挨拶しろ」
+　津雲に促されて希海はしぶしぶと、それでいて少し落ち着かない様子で自己紹介を始める。
+「え、えっと。三年六組の青山希海……です。こ、これからよろしく」
+　そう言って人民帽をとり、小さく会釈する希海。もっと物静かな印象があったが、こうして実際に話しているのを前にすると案外そうでもなさそうである。
+「青山さん、よろしく。私は古江紀佳。クラス同じだし、これから仲良くしよう。そんでもってこっちは……」
+「えっと……藤白貴和だ。なんか色々あって今日からこっちにお世話になりそう。これからよろしく。せ、先輩」
+「えっと古江さんに藤白くん、ね。まあまだ分からなかいことも沢山あるだろうけど、何かあったら私に聞いてくれたらいいから」
+　三人がそれぞれ自己紹介を終えるのを見計らって津雲がまとめにはいる。
+「青山は高一の頃からこっちでバイトまがいのことしてたからな。今年で三年目か。まあ経験はかなりある方だと思うから、何かあったら頼るといい。じゃあ今から……そうだな。せっかくだし、さっそくルーミングやってみるか？」
+「ルーミング？」と紀佳。
+「ああ、そういや言ってなかったな。患者の精神に入ることを俺たちは『ルーミング』って言ってるんだ。まあ業界用語だな」
+「いきなり本番は流石にちょっと……」と藤白。
+「大丈夫だ。本番じゃない。ここにはルーミングの訓練施設があって、今回はそれを使った予行演習みたいなことをするだけだ。それに、お前らの<ruby>表現<rp>《</rp><rt>リプリゼンテーション</rt><rp>》</rp></ruby>も早めに知っておきたいしな」
+　そして話はトントン拍子で進んだ。
+　三人は二、三の説明を受けながら廊下を歩き、そして病院内の一番奥まった場所にある部屋へと案内された。小さく重い扉を開くと、そこには窓一つ無い開けた部屋と、そこに置かれた三つのベッド。壁際にはロッカーを数段重ねにしたような計器類が所狭しと並べられており、そこからベッドに向かって何本ものケーブルが伸びていた。
+「俺は担当者を呼んでくるからこっから先は青山が説明してくれ。ルーミング予定時刻は……そうだな今から30分後くらいでいいだろ。じゃあ後は頼んだぞ」
+　津雲はそう言ってさっさと部屋の外へと出て行ってしまう。吸音フェルトがびっしり貼られた扉を閉めると、乾いた音が部屋の中に短く響いた。
+「えっと……じゃあ、そうね……」
+　その乾いた音が鳴り止むのを見計らって、希海は二人に向き直る
+「二人がルーミングに関してどこまで知っているのか分からないけど……、まあ、とりあえず、ここがルーミングをするための部屋ね。ほら、そこにベッドがあるでしょ。基本的には薬を飲んで頭と首に計器類を接続してから、あそこに寝っ転がってればいいの。あとは機械が自動的にやってくれるって寸法」
+　だがその説明を受けても、藤白にはまだ自分たちが何をするのかがピンとこなかった。
+「患者はどこに？」
+「普段ならこの部屋の隣に患者がいて、その患者と私達の脳がこの辺に散らばってる機械を介して繋がれるわけ。ただ今回は――」
+「訓練って言ってたよね」と紀佳。
+「うん。今回は訓練だから、繋がる相手は本物の人間じゃなくて機械。もっと正確に言うと、私達の脳から出てくる信号を受け取って擬似的な応答を返すプログラムね。つまりコンピュータ上のシミュレーション世界に入り込むわけ」
+　まあ、説明するより実際にやってもらった方が早いかな。希海はそう言うと、計器の上に置かれた樹脂製の棚を乱暴に開くと、その中から何かを取り出した。
+「はいこれ。二人分あるから」
+　差し出された手の上に置かれていたのは、数粒の糖衣錠だった。
+「これは感覚を一時的に麻痺させるための薬。あ、ちなみに水は部屋を出て左に進んだところにウォーターサーバーがあるからそこで……って、せっかくだし一緒に行こっか。私も飲まなきゃいけないんだし」
+　そして二人は希海に案内されて廊下を歩き、ウォーターサーバーで薬を飲んだ。知らない薬を服用することに少し抵抗がある藤白だったが、希海は慣れた手つきでさっさと薬を飲んでしまい、紀佳の方も躊躇いなくそれを口にした。
+　部屋に戻り、再び希海の説明を受ける。と言ってもここからの説明は大したものではなく、ベッドの頭部分から伸びる計器類を装着する方法と、その他些細な注意点くらいで特筆すべきものはない。
+「えっと……じゃあこれで準備完了なのか？」
+「肩こりそう」
+　首から何本ものワイヤーハーネスをぶら下げる紀佳の姿は、さながらエリマキトカゲかなにかのようだった。
+「あ、あと枕元にヘッドギアみたいなのがあるでしょ。それを付けたら準備完了。あとは電気消して横になってればいいだけだから。簡単でしょ？」
+　希海はそう言うと藤白たちが装着しているのと同じ、ハーネスが伸びる首輪のようなパーツを装着する。これはネック<ruby>ＳＱＵＩＤ<rp>《</rp><rt>スクイド</rt><rp>》</rp></ruby>と呼ばれジョセフソン効果を利用して脳から出る信号を読取るための装置なのだが、当の藤白たちにそんな難しい話は分かりやしない。
+「じゃ、電気消すよ。寝っ転がって静かにしててね」
+　希海はそう言うと、手に持ったリモコンを使って部屋の照明を消した。吸光フェルトに覆われた壁は一切の光を反射せず、まるで月のない田舎の夜道ように真っ暗になる。
+「…………」
+　ベッドに寝転がった藤白は、ぼんやりと今日のことを考えていた。
+　もう来ないと思っていた紀佳に朝起こされたこと。新学期が始まって二日目の下駄箱で、希海の姿を見たこと。ストーカーまがいの尾行の果てにこんな場所へ来てしまったこと。
+　だが、そのすべてを思い出そうとしてもそれらに実感は伴っていなかった。まるで夢の中にいるように、一切の記憶に現実感が湧かない。
+（でも夢……じゃないんだな）
+　そう、これは夢ではない。めまぐるしく移り変わる現実を思うと、藤白の心臓が少しだけ跳ねた。その正体が期待なのか不安なのかは誰にも分からない。
+　そんな風にぼんやりと考え事をしていると、次第に体の感覚が無くなってくる。薬が効いてきたのだ。
+　まず消えたのは平衡感覚。ブランコにゆられるように頭のなかがグラグラとしてくる。自分が立っているのか寝ているのか分からない。
+　次に消えたのは皮膚の感覚。ベッドから感じられる圧力が消え、まるでフワフワと宙を漂っているかのような気分に襲われる。
+　そして最後に消えたのは時間の感覚。まるで眠りに落ちる直前のように、一分一秒という感覚が曖昧になっていき、やがてそこが夢か現実かの区別すら曖昧になってくる。
+
+　――カズくん
+
+　誰かが自分を呼ぶ声がする
+
+　――カズくん。起きて
+
+　この声は紀佳だ。性懲りもなくまた起こしに来たというのだろうか。もういらない、と言ったのに。
+
+「カズくん」
+
+　目を開けると、そこは見知らぬ場所だった。
+　グリッドの刻まれた真っ白な床面が地の果てまで続いているだだっ広い空間。その現実離れした大地の上には数世代前のちゃちな３Ｄモデリングかと見紛うような、濃い赤や緑をした大小様々な球形のオブジェが置かれている。
+「……あれ、ここ？」
+　目を擦って体を起こすと、そこには希海と紀佳が立っていた。
+「二人とも起きたみたいね」
+　藤白が立ち上がるのを確認すると、希海は辺りをぐるっと見渡して説明を始める。
+「ここが他者の精神空間……を模したコンピュータ上のヴァーチャル空間よ。とは言っても人間の精神を完全に模倣するのは難しいから、こんな大昔の３Ｄゲームみたいな感じになっちゃってるんだけどさ。本物はもっともっとリアルだからその辺は注意しといてね」
+　希海はそう言ってぼりぼりと頭をかきむしる。
+「じゃあ、早速だけどお二人さん……。何かこう……自分の内側からもくもくと湧き上がってくるような感覚はない？」
+「……え、えっとそれはどういう」
+　希海の言っている言葉の意味が理解できず藤白は紀佳と顔を見合わせる。
+「ここは精神空間。いわば夢の中なの。だから現実の物理法則から逸脱した形の様々な現象が起こりうるわ。例えば、見ただけで物が燃やせたり、触れただけで石ころを真っ二つに割れたり……」
+　そして希海は自らの横に置いてあった赤い楕円形のオブジェをちらりと見た。すると次の瞬間、そのオブジェがひとりでに宙に浮き上がり、希海の周囲をくるくると回り始める。
+「こんな風に手に触れず物を動かせたり」
+「……なっ！？」
+「これが<ruby>表現<rp>《</rp><rt>リプリゼンテーション</rt><rp>》</rp></ruby>って言われるもので、特定精神医療従事者なら誰でも持ってる能力……ていうかこれを持ってる人が特定精神医療従事者に選ばれるんだけどね」
+　希海が空き缶を後ろに投げるような動作をすると、宙に浮いていたオブジェがそれに呼応するように向こう側へ飛んでいく。
+「とにかく、二人とも適正アリって判断された以上は何かしらの能力があるかと思うんだけど……どうかな」
+　藤白は困ったように紀佳の方を見たが、一方の紀佳は何かを考え込むかのように俯いたまま視線を上げようとしない。
+「どうって言われても……。特に何もないぞ俺……」
+「えっ？　そ、そんなことはないと思うんだけどな……。私のときはちゃんとそういう感覚あったし……。ていうかこればっかりは個々人の問題だから私が何かを教えられるようなものじゃないのよね……。どうしよう……」
+　助けを求めるようにそんな希海を見つめる藤白。だが次の瞬間、藤白の脳裏に一つの<ruby>描像<rp>《</rp><rt>イメージ</rt><rp>》</rp></ruby>が浮かんだ。
+　自らの右手から伸びていく細い細い、今にも千切れてしまいそうな一本の糸。その糸は希海の左手にするりと絡まると、何かを伝えるようにぶるぶると振動を始める。
+「――！？　そうだ、先輩！」
+「えっ、な、なに？」
+　これだ、と思った藤白は、そのイメージが消えてしまわないようにと急いで希海のそばへ駆け寄る。
+「ちょ、ちょっと俺の手を握ってくれないか！？」
+「えっ！？　手、手って！？」
+　少し顔を赤らめて戸惑う希海。その反応を見て、藤白はようやく自分のいった言葉の意味を理解した。
+「……あっ、い、いや、その嫌ならいいんだけど」
+　これではどさくさに紛れて体に触れようとしているようではないか。ついさっきまでやっていたストーカーまがいの尾行が脳裏をよぎり、自分が変態かなにかになってしまったような感覚が藤白を襲う。
+　だが希海は恥ずかしそうに俯くと、無言で、その手を藤白の手に重ねてきた。小さくてすらっとした綺麗な手から、自分ではない他者の温度が伝わってくる。その柔らかさと温かさに、藤白はどきりとした。
+「に、握ったよ。それで……？」
+　しばらくの間ぼけっと肌の温かさを感じていた藤白は、希海のその言葉にはっとした。
+「あ、ご、ごめん。多分もういい……と思う」
+　藤白は自分から手を引っ込めると、精神を集中し、希海の目をじっと見つめる。そして希海が気まずそうに視線を逸らした次の瞬間。
+『先輩、聞こえるか』
+　藤白は口に出さずに、頭のなかでそう言った。
+「――へ？」
+　一瞬きょとんと、間抜けな表情を浮かべる希海。
+『先輩、聞こえるか？　聞こえてたら返事してくれ』
+「な、なにこれ！？　頭のなかに藤白くんの声が響く！」
+　希海は混乱した面持ちで自分の頭に手を乗せて叫ぶ。その様子に、一部始終を見ていた紀佳が怪訝そうに眉をひそめた。
+「……どういうこと？」
+「あ、頭、頭のなかで藤白くんの声が聞こえるの！　すごい！　これってテレパシー！？　藤白くん、こんなことができるんだ！」
+　上手くいったみたいだ。多分、これが自分の能力なのだと藤白は思う。不思議な感覚だ。今の今までそんな超能力じみた力など持っていなかったというのに、あの糸が伸びるイメージを見て以降、今では昔からできたかのように自然なものとしてそれを受け入れることができる。
+「いや、多分これだけじゃない。先輩、次は先輩が頭のなかで何かを考えてくれ」
+「えっ……それって？」
+「何でもいい。ただ強く、強く念じてくれた方がこっちとしても“受信”しやすいと思う」
+「え、えーっと……じゃあ……」
+　希海はそう言うとぐっと拳を握りしめ、目を閉じて食いしばるように念じ始める。何もそこまで力まなくてもいい気がしたが、邪魔をしてはいけないと思って藤白は何も言わない。
+『あーあーあー、テスト。テスト』
+　次の瞬間、頭の中に希海の声が響いてきた。藤白はメッセージを受け取ったことを伝えるために、希海の念じた内容をオウム返しで口にする。
+「あーあーあー、テスト。テスト……か？」
+「す、すごい。合ってる！　合ってるよ！」
+　答え合わせが上手く行ったことを確認した藤白は、少しだけ得意な気分になる。
+「と、まあ、こんな感じだな。俺の、その<ruby>表現<rp>《</rp><rt>リプリゼンテーション</rt><rp>》</rp></ruby>ってヤツは。一度触れた人と言葉を交わさずにメッセージをやりとりできる……らしい」
+「へぇ、カズくんそんなことできるんだ。でもさ、考えたことがそのまま伝わるなら、教えたくないことまで伝わっちゃうんじゃ」
+　それまで黙っていた紀佳が割って入る。
+「えっ！？　ちょ、ちょっとやめてよ藤白くん。わ、私にだって知られたくないことくらい」
+「ところで青山さん」
+「な、なに？」
+「今までで一番恥ずかしい経験は何ですか」
+「やめんかボケっ！　ああああああもうやだやだ！　絶対教えないからね！　あーあーあーあーあーあーあー！！」
+「ま、まあ大丈夫だと思うぞ。こうして普通に会話してても、何も頭に聞こえてこないし、意識して強く念じない限りは俺の言葉も、先輩の言葉も互いに聞こえないんだと思う」
+「そ、そう……。だ、だったらいいんだけど……」
+　落ち着きを取り戻した希海はこほん、とひとつ咳払いをすると藤白の方へ向き直り。
+「じゃあ、さっそく、実践練習でもしてみる？」
+「実践練習？」
+「うん。実際に患者の治療にあたる時は、患者が『帰りたくない』って言いだしたときは、無理やり連れて帰らないといけないわけじゃない？　てかそういうときにこういう能力を使って……まあ、いわば力づくで連れて帰るわけだけどさ。でも殆どの場合、相手も同じようにこういう超能力じみたことができるの。だからこの場合の実践練習っていうのは模擬戦のことなんだけど……」
+　希海はそう言って、三歩ほど後ろへと下がって藤白と距離を取る。
+「まあでも藤白くんの能力はちょっと戦うのに向いてない気はするわね。どうする？　何なら実践練習ナシってことでもいいけど」
+　藤白は考える。確かに自分の能力は相手の口に出さずして相手に言葉を伝える力だ。これを使ってどうやって戦えというのだろう。でも自分は先輩よりも一回り以上体が大きいし、スポーツだって苦手ではない。そんな自分が女の子を前にして尻込みをするのはちょっと格好悪いし、何よりそんな姿を希海に見せたくはなかった。
+「いや、いいぜ。やってやる。体格差だってあるんだし、能力の差はちょうどいいハンデだろ」
+　だから藤白はそう強がってみせる。何、希海の能力はつい先程見せてもらったばかりではないか。物体を触れずして動かせるくらい何だというのだ。少しばかり手が長くなった程度だと思えばいい。
+「そう？　じゃあやってみよっか。ルールは簡単。藤白くんと私が左腕に着けてるその腕章。それに触れた方が勝ち。ただしハンデとして……」
+　希海はそう言うと、ジャリと音を立てて足元の真っ白な大地を靴でこする。
+「私はここから後ろに下がらない。じゃ、はい。今からスタート」
+　そのあまりにのんきな様子に藤白は戸惑いを覚える。いくらなんでもハンデが大きすぎないだろうか。実践と言ってもルールを聞けばいわばケンカみたいなもので、今も昔もケンカに一番有利な<ruby>要因<rp>《</rp><rt>ファクター</rt><rp>》</rp></ruby>は体格だ。見たところ希海の身長は１６０センチと少し。一方の藤白は１８０代の前半である。体重や筋肉量だって大きな差があるだろう。能力以前にそんな明らかな差があるのに、まだこれ以上ハンデを着けようという希海の気がしれなかった。
+「どうしたの？　もう始まってるよ？」
+「いや、さすがにちょっとそれはハンデでかすぎないか……？」
+　そうこぼした藤白に対して希海は意地悪そうな笑みを浮かべると、
+　――ごん
+　次の瞬間、藤白の後頭部に鈍い痛みが走った。
+「痛ってえ！？」
+　頭をさすりながら振り返ると、どこからともなく飛んできた円盤状のオブジェがくるくると宙を舞っていた。
+「ほらほら。ちょっと体大きいからって、あんまりなめてもらったら困るわよ？　私こういうのは慣れてるんだから」
+「く、くそ……」
+「だからね。本気で来てくれていいわよ。それこそ殴ったり蹴ったりするつもりでも全然平気だから」
+　なるほど。そういうことなら遠慮はやめようと藤白は思う。とりあえず相手のリーチの長さが厄介だ。とくると、まずすべきことは――
+　そして藤白は希海に向かって一直線に駈け出した。相手の力がどれほど遠くまで及ぶのかは分からないが、近づいてしまえば希海の能力の最大の長所である射程距離が全然活かせなくなってしまうだろう。だが、
+「うわっ！？」
+　どこからともなく飛んできた棒状のオブジェが藤白の足元に転がされ、それを踏んづけてしまった藤白はあえなくその場にすっ転んでしまう。
+「ち、ちくしょう……って、ぐえっ！」
+　立ち上がろうとした藤白の背中に、ダメ押しとばかりに楕円状のオブジェが炸裂する。波状攻撃を受け地面に這いつくばっていた藤白。希海はそんな藤白の元へと優雅に歩いて行き、その腕章にちょこんと指先で触れると
+「はい、私の勝ち」
+　そう言ってにっこりと微笑むのだった。
+
+　その後、何度も挑戦してみたが、藤白が希海に勝てることはついになかった。
+　不意打ちでスタートダッシュを決めるもあえなくすっ転ばされるし、足元に注意して走ったら今度は上からオブジェが落ちてくる。左右に跳んで避けようとするも横から別のものが飛来するし、距離を取って後ろに退けば正確無比な遠投に追い打ちされる。
+「も……もう無理。まいった」
+　そして藤白は音を上げてその場に倒れこんだ。
+「よろしい」
+　希海はその様子を見て満足したかのように、うん、とうなずいてみせる。あ、この人結構サドっ毛あるな、と藤白は思った。
+　真っ白な地面に横たわり、ただ無心に上空を眺める。そこにはグリッドの引かれた真っ白な天井がどこまでも続いていて、しばし凝視しているとどちらが地面でどちらが天井なのかがだんだん分からなくなってくる。
+「先輩は……いつもこんなことやってんのか」
+「まあね。中には素直に出てきてくれる患者もいるけど、十中八九何かしらの争いになるかな。じゃあ次は……」
+　そして希海は紀佳の方に向き直り
+「古江さんの番ね」
+　そう静かに告げるのだった。
+「えっ？　紀佳もやるのか……？」
+「うん、そりゃね。ていうかそのために今日はこんな場所まで来てもらったわけだし」
+「いや、でも紀佳は……」
+　紀佳は運動が大の苦手である。
+　小さい頃から体育の成績はいつもビリだったし、一緒に登校するときだって、どんなに遅刻しそうでも紀佳の足の遅さを鑑みて藤白は絶対に走ることをしなかった。ひとたび自分が走り出すと、次振り返ったときにはもう半径数十メートルの範囲に紀佳の姿はなく、息を切らしながら遥か後ろを走る米粒のようなサイズの少女を確認することができる。そんなレベルの運動音痴だ。
+　だから藤白には紀佳にこんな荒事ができるとは思えなかったのだが、事情を知らない希海はまた話が別である。同じクラスとはいえ、まだ体育の授業も始まっていない新学期二日目でにしてその運動音痴具合を認知するのは無理があるのだろう。ここは自分が少し説明しておいたほうがいい。そう思ってその場から立ち上がった藤白だったが、
+「私は……もう準備できてるよ」
+　当の紀佳は希海をまっすぐに見据え、そう静かに言い放つのだった。そのセリフに『へぇ』と関心した表情を浮かべる希海。
+「あ、じゃあ能力に関してはちょっと伏せとこっか。実戦だと互いに何も分からない状態からその……戦いが始まるわけじゃない？　せっかくだしいきなり模擬戦やってみようよ。まあ古江さんには私の能力もう見せちゃったけど、それはハンデってことで」
+「うん、私はそれでいい」
+「じゃあルールは藤白くんとやったときと一緒ってことで、はいスタート」
+「お、おい紀佳――」
+　お前、大丈夫なのか。そう割って入ろうとした藤白の言葉が最後まで出ようとした次の瞬間。
+　たん、という音。紀佳の姿が消えた。
+　いや、正確に言えば消えてはいない。紀佳は狩りをする猫のように一瞬でその場から跳躍したのだ。その事実を藤白が把握したときには紀佳はもう希海の目の前に着地をはじめていて、
+　――！！
+　不意を突かれる形になった希海は、少し遅れて紀佳の背後にあったオブジェを投げつけた。あまりに突然のことで手加減ができなかったのだろう。そのスピードは遊び半分でやっていた藤白のときと比較にならない。
+　だが紀佳は背後に目でも付いているかのように振り返らず、横に飛んでそれを避ける。その回避行動に反射神経が追いつかなかったのか、さっきまで紀佳のいた空間に向かって放たれたオブジェは希海自身に刃をなす一撃になってしまう。
+「しまっ――！」
+　両腕で体と顔面を守りながらオブジェに跳ね飛ばされる希海。紀佳はそんな相手の隙を見逃しはしない。さらに一跳びをして距離を詰めると、その右手を伸ばして希海の腕章を鷲掴みにしようと――
+　だが伸ばした手は目的のものに触れる寸前に引っ込められた。両脇から飛んできたオブジェを避ける形で紀佳は後ろに跳躍すると、そのまま跳ねまわるボールのように天井や床を蹴って希海から距離を取る。
+　中空でオブジェ同士が衝突する乾いた音が響き、それを合図に再び前へ跳び出す紀佳。だが希海はその動きを予想していたかのように、宙をゆく紀佳の軌道上にひときわ大きな、人の胴体ほどもあるオブジェを投げてよこした。一方の紀佳はそのオブジェを蹴ってふわりと軌道を上空に移すが、
+　それが悪手だった。
+　その直後、前後左右とおまけで斜めから、五つの異なるオブジェが紀佳を襲った。速度も軌道もばらばらな五つの砲弾。中空で身動きが取れなくなった紀佳はそれを避けられず、体をすくめて防御することしかできない。
+　そして次の瞬間、ばきり、という嫌な音を藤白は確かに聞いた。
+　「お、おい紀佳！」
+　叩き落とされた蝿のように、頭を下にしてその場に力なく落下する紀佳。右手一本で着地をして頭を守ろうとするが、上手くいかずにその場に倒れこんでしまう。
+　希海はそんな紀佳の元へ一目散に駆けていく。そしてその腕章に手を掛けようとした次の瞬間、
+　うずくまっていた紀佳の足が動いた。バネのように蹴り出された右足が<ruby>鳩尾<rp>《</rp><rt>みぞおち</rt><rp>》</rp></ruby>を直撃し、希海は数歩分後ろに跳ね飛ばされて仰向けに倒れこんでしまう。紀佳は体を反らして片手で起き上がり、そのまま倒れこんでいた希海に馬乗りになるとその腕章に手をかけようとして、
+　止まった。
+　仰向けに倒れたままの状態から伸ばした希海の右手。
+　その手は紀佳よりも一瞬早く、相手の腕章に触れていた。
+　
 </div>
 
     <div id="footer" v-component="metastable-page-footer"></div>
