--- a/metastable3/0.html
+++ b/metastable3/0.html
@@ -16,35 +16,34 @@
 <div class="text">
 　そこは墓場だった。
 
-　夕日の赤色がどす黒い雲と混ざり合ったグロテスクな空と、耳障りな鳴き声を上げながらあてもなく周回するカラスの群れ。もうずっと沈みかけたままの太陽は一向にその姿を暗ますことはなく、十字架の影が石畳におびただしい数の模様を刻んでいる。
-　私は、ひとつの墓の前で立ち尽くしていた。
+　夕日の赤色がどす黒い雲と混ざり合ったグロテスクな空と、耳障りな鳴き声を上げながらあてもなく周回するカラスの群れ。もうずっと沈みかけたままの太陽は一向にその姿を暗ますことはなく、おびただしい数の十字架が石畳に複雑な影を刻んでいる。
+　そんな中、私はひとつの墓の前で立ち尽くしていた。
  その簡素でみすぼらしい石塊は、周囲のそれと同じようにキリスト教の様式に従って装飾が施されている。こんな場所一度も来たことがないというのに、家は代々浄土真宗だというのに、私にはその墓が自分のために作られたものであるとすぐに理解できた。
 　そう、これは私の墓。私はつい先日、死んでしまったのだ。なぜだかは分からない。けれど私には、まるで幼いころ１＋１が２であることを誰に教わるでもなく知ったのと同じように、自然とそれを理解することができた。
-　だがこれが自分の墓なのだとすれば……私は一体どうしてここに立っているんだろう。死してなおこの場に立っている自分は、一体何者なのだろう。そんな疑問が頭をよぎったが、それについて深く考えようとは思わなかった。
-　そんな風にしばらく思考することを忘れていた私の背後。死人のように動かず、ただじっと自らの墓石を眺めていた私の背後で、ひとつの気配がした。
-　ざり、とスニーカーが石畳をこする音。私の全身は次いで少しだけ緊張したような息遣いを捉える。
+　だがこれが自分の墓なのだとすれば……私は一体どうしてここに立っているんだろう。死してなお墓に入らずこの場に立ち尽くしている自分は、一体何者なのだろう。そんな疑問が頭をよぎったが、私はそれについて深く考えたくもなかった。
+　そんな風にしばらくカラスの鳴き声を聞いていた私の背後。死人のように動かず、ただじっと自らの墓石を眺めていた私の後で、ひとつの気配がした。
+　ざり、とスニーカーが石畳をこする音。少しだけ緊張したような息遣い。
 「あの……」
-　気配が口を開いた。その声は若い……ちょうど私と同じくらいの年齢の女の子のもの。音の伝わり方から、声の主が数メートルほど後ろに立っていることがわかる。
+　気配が口を開いた。その声は若い……ちょうど私と同じくらいの年齢の女の子のもの。音の伝わり方から、声の主が自分より数歩ほど後ろに立っていることがわかる。
 「えっと……ごめん、どこから話したらいいんだろ……」
-　その人は戸惑っていた。気まずそうな声色。下を向き必死に言葉を紡ぎだしている人物の姿がありありと目に浮かぶ。
+　その人は戸惑っていた。気まずそうな声色が石畳の大地に反響し、下を向いて必死に言葉を紡ぎだしている人物の姿が私の脳裏をよぎる。
 「私を連れ戻しにきたの？」
 「……！！」
-　背後の気配が息を呑む。私は振り返らない。
+　なんとなくつぶやいてみた言葉。背後の気配は息を呑むが、私は振り返らない。
 「うん……そうだよ。もし嫌だって言うのなら……」
-　声の主はそう言って言葉の尾を濁し、ぎり、と拳を握りしめた。
+　声の主はそう言って言葉を濁し、ぎり、と拳を握りしめた。まだらの雲が形を変え、ゆるやかな風が墓地を駆け抜ける。
 　嫌だと言うのなら――
-　私にはその言葉の先にあるものがなんとなく分かっていたし、背後の人物の覚悟を決めたような様子からも容易に想像がついた。
+　私にはその言葉の先にあるものがなんとなく分かっていた。そしてそれは背後の人物の覚悟を決めたような様子からも……。
 「…………」
 　そっと目を伏せる。
 　まぶたを閉じ、視界が闇の底に沈んでも、さっきまで見ていた真っ赤な夕焼けの空とそれに照らされた灰色の墓石は今も私の頭のなかを駆けまわっている。鼠色の墓碑に見たこともない文字で刻まれた私の名と、その前に立ち尽くす自分。死んだはずの自分と、それでも生きてる自分。
-　そうだ。私はあの日、死んでしまったのだ。死んでしまって、でもなぜか墓から出てきてしまい、こうして自らの墓石の前で呆然と立ち尽くしているのだ。
+　そうだ。私はあの日、死んでしまったのだ。死んでしまって、でもなぜか目を覚ましてしまい、こうして自らの墓石の前で呆然と立ち尽くしているのだ。
 　まるで<ruby>生きる屍<rp>《</rp><rt>ゾ　ン　ビ</rt><rp>》</rp></ruby>だった。そして死体が痛みなど感じないのと同じように、あの日、あんなに消し去りたかった胸の痛みはもはや何処かへ飛んでいってしまっている。今の私にできることといえば、ただひとつ残った体を支えながら考えることをやめて立ち尽くすことだけ。ならば――
 「わかった。もどる」
 　ならば、元いた場所に戻ろう。どうせ私は死ねなかったのだ。こうして立っていることしかできないのならば、それがどこであっても同じこと。
 　私は目を開き、髪を踊らせながらくるりと背後を振り返った。
-　そこに立っていた女の子は、私のあまりの物分かりの良さに面食らったように目を丸くして、
 「そ、そうだね。素直に帰ってくれると……すっごく助かる……かな？」
-　そう言って少し安堵したような表情を見せた。負けん気だけは人一倍強そうな目と、校則違反まちがいなしといった色のふわりとしたくせっ毛。カーキ色の人民服と人民帽、左腕に巻かれた校名入りの真紅の腕章。
+　そこに立っていた女の子は私のあまりの物分かりの良さに面食らったように目を丸くすると、そう言って少し安堵したような表情を見せた。負けん気だけは人一倍強そうな目と、校則違反まちがいなしといった色のふわりとしたくせっ毛。カーキ色の人民服と人民帽、左腕に巻かれた校名入りの真紅の腕章。
 　女の子の制服は、私の通っている高校のそれだった。
 </div>
 
